Add data prepartion section

--- a/Naive-Bayes.ipynb
+++ b/Naive-Bayes.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "The Naive-Bayes algorithm is an intuitive approach to making predictions based on prior beliefs or probabilities. Quoting Jason Brownlee, \"it is the supervised learning approach you would come up with if you wanted to model a predictive modeling problem probabilistically\".\n",
     "\n",
-    "Let's dive into the mathematics. We start off with a belief or a *prior probability* of event $A$. This is denoted as $P(A)$. Everything seems to be going well until we're hit with some new evidence $X$, which implies something about our belief. As much as we'd like to, we can't simply ignore $X$ and go home. Instead, given evidence $X$, we must calculate a new value for event $A$ called the *posterior probability*. This is denoted as $P(A | X)$. Finally, for the sake of completion, $P(X | A)$ is the probability of observing evidence $X$ for event $A$ and $P(X)$ is the untouched probability of observing evidence $X$.\n",
+    "Let's dive into the mathematics. We start off with a belief or a *prior probability* of event $A$. This is denoted as $P(A)$. Now, everything seems to be going well until we're hit with some new evidence $X$, which implies something that affects the probability of our belief. As much as we'd like to, we can't simply ignore $X$ and go home. Instead, given evidence $X$, we must calculate a new value for event $A$ called the *posterior probability*. This is denoted as $P(A | X)$. Finally, for the sake of completion, $P(X | A)$ is the probability of observing evidence $X$ for event $A$ and $P(X)$ is the untouched probability of observing evidence $X$.\n",
     "\n",
     "\\begin{align}\n",
     " P( A | X ) = & \\frac{ P(X | A) P(A) } {P(X) } \\\\\\\\[5pt]\n",
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data Acquisition and Formatting\n",
+    "Data Loading and Formatting\n",
     "-------------------------------"
    ]
   },
@@ -106,19 +106,85 @@
     "        \n",
     "    return [train_set, test_set]\n",
     "\n",
-    "train_set, test_set = partition_data(dataset, 0.67)\n",
-    "print('Split total data ({0} rows) into training set ({1} rows) and testing set ({2} rows)').format(len(dataset), len(train_set), len(test_set))\n",
+    "train_set, test_set = partition_data(dataset)\n",
+    "print('Split total data ({0} rows) into training set ({1} rows) and testing set ({2} rows)').format(len(dataset), len(train_set))\n",
     "    "
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Organization and Pre-calculations\n",
+    "--------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that our dataset has been partitioned, let's visualize what it actually looks like and discuss how we should transform it going forward. Currently, our training set, $T$, can be described as an $m \\times n$ matrix,\n",
+    "\n",
+    "\\begin{align}\n",
+    "T = \n",
+    "\\begin{bmatrix}\n",
+    "    x_{11}       & x_{12} & x_{13} & \\dots & x_{1n} \\\\\n",
+    "    x_{21}       & x_{22} & x_{23} & \\dots & x_{2n} \\\\\n",
+    "    \\vdots & \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "    x_{m1}       & x_{m2} & x_{m3} & \\dots & x_{mn}\n",
+    "\\end{bmatrix}\n",
+    "\\end{align}\n",
+    "\n",
+    "where $m$ is the number of data points and $n$ is the number of attributes plus the classification value for each data point.\n",
+    "\n",
+    "Next, we want to group our data points by class, $T(0)$ and $T(1)$,\n",
+    "\n",
+    "\\begin{align}\n",
+    "T(0) = \n",
+    "\\begin{bmatrix}\n",
+    "    x_{11} & x_{12} & x_{13} & \\dots & x_{1n-1} & 0 \\\\\n",
+    "    x_{21} & x_{22} & x_{23} & \\dots & x_{2n-1} & 0 \\\\\n",
+    "    \\vdots & \\vdots & \\vdots & \\ddots & \\vdots & \\vdots \\\\\n",
+    "    x_{m1} & x_{m2} & x_{m3} & \\dots & x_{mn-1} & 0\n",
+    "\\end{bmatrix}\n",
+    "\\\\\n",
+    "\\\\\n",
+    "T(1) = \n",
+    "\\begin{bmatrix}\n",
+    "    x_{11} & x_{12} & x_{13} & \\dots & x_{1n-1} & 1 \\\\\n",
+    "    x_{21} & x_{22} & x_{23} & \\dots & x_{2n-1} & 1 \\\\\n",
+    "    \\vdots & \\vdots & \\vdots & \\ddots & \\vdots & \\vdots \\\\\n",
+    "    x_{m1} & x_{m2} & x_{m3} & \\dots & x_{mn-1} & 1\n",
+    "\\end{bmatrix}\n",
+    "\\end{align}\n",
+    "\n",
+    "In the implementation, we'll organize each datapoint into a map where the key is the classification value and its values are the data points that belong to it. The classification value for each data point will be removed afterwards."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def group_by_class(dataset):\n",
+    "    klass_map = {}\n",
+    "    for el in dataset:\n",
+    "        klass = int(el[-1])\n",
+    "        if klass not in klass_map:\n",
+    "            klass_map[klass] = []\n",
+    "        klass_map[klass].append(el[:-1])\n",
+    "    return klass_map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For each attribute, we want to calculate the mean and standard deviation"
+   ]
   }
  ],
  "metadata": {
