Created parallel data summarization module

--- a/Naive-Bayes.ipynb
+++ b/Naive-Bayes.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -106,8 +106,8 @@
     "        \n",
     "    return [train_set, test_set]\n",
     "\n",
-    "train_set, test_set = partition_data(dataset)\n",
-    "print('Split total data ({0} rows) into training set ({1} rows) and testing set ({2} rows)').format(len(dataset), len(train_set))\n",
+    "train_set, test_set = partition_data(dataset, 0.67)\n",
+    "print('Split total data ({0} rows) into training set ({1} rows) and testing set ({2} rows)').format(len(dataset), len(train_set), len(test_set))\n",
     "    "
    ]
   },
@@ -135,39 +135,48 @@
     "\\end{bmatrix}\n",
     "\\end{align}\n",
     "\n",
-    "where $m$ is the number of data points and $n$ is the number of attributes plus the classification value for each data point.\n",
+    "where $m$ is the number of data points and $n$ is the number of attributes including the classification value for each data point.\n",
     "\n",
-    "Next, we want to group our data points by class, $T(0)$ and $T(1)$,\n",
+    "Next, we want to summarize our data. First, we want to group our data points by classification value, giving us two matrices, $T(0)$ and $T(1)$. Afterwards, we must calculate the mean and standard devation for each attribute and store them as a matrix of tuples in preparation for our probability function later on.\n",
     "\n",
     "\\begin{align}\n",
     "T(0) = \n",
     "\\begin{bmatrix}\n",
-    "    x_{11} & x_{12} & x_{13} & \\dots & x_{1n-1} & 0 \\\\\n",
-    "    x_{21} & x_{22} & x_{23} & \\dots & x_{2n-1} & 0 \\\\\n",
-    "    \\vdots & \\vdots & \\vdots & \\ddots & \\vdots & \\vdots \\\\\n",
-    "    x_{m1} & x_{m2} & x_{m3} & \\dots & x_{mn-1} & 0\n",
+    "    (\\bar{x}, s)_{1} \\\\\n",
+    "    (\\bar{x}, s)_{2} \\\\\n",
+    "    \\vdots \\\\\n",
+    "    (\\bar{x}, s)_{n}\n",
     "\\end{bmatrix}\n",
     "\\\\\n",
     "\\\\\n",
     "T(1) = \n",
     "\\begin{bmatrix}\n",
-    "    x_{11} & x_{12} & x_{13} & \\dots & x_{1n-1} & 1 \\\\\n",
-    "    x_{21} & x_{22} & x_{23} & \\dots & x_{2n-1} & 1 \\\\\n",
-    "    \\vdots & \\vdots & \\vdots & \\ddots & \\vdots & \\vdots \\\\\n",
-    "    x_{m1} & x_{m2} & x_{m3} & \\dots & x_{mn-1} & 1\n",
+    "    (\\bar{x}, s)_{1} \\\\\n",
+    "    (\\bar{x}, s)_{2} \\\\\n",
+    "    \\vdots \\\\\n",
+    "    (\\bar{x}, s)_{n}\n",
     "\\end{bmatrix}\n",
     "\\end{align}\n",
     "\n",
-    "In the implementation, we'll organize each datapoint into a map where the key is the classification value and its values are the data points that belong to it. The classification value for each data point will be removed afterwards."
+    "In the implementation, we'll summarize the data set into a dict where each key and value are the classification value and attribute summaries, respectively."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class 0 contains 332 data points\n",
+      "Class 1 contains 182 data points\n"
+     ]
+    }
+   ],
    "source": [
     "def group_by_class(dataset):\n",
     "    klass_map = {}\n",
@@ -176,15 +185,88 @@
     "        if klass not in klass_map:\n",
     "            klass_map[klass] = []\n",
     "        klass_map[klass].append(el[:-1])\n",
-    "    return klass_map"
+    "    return klass_map\n",
+    "\n",
+    "classified_set = group_by_class(train_set)\n",
+    "\n",
+    "for klass, data_points in classified_set.iteritems():\n",
+    "    print('Class {0} contains {1} data points').format(klass, len(data_points))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For each attribute, we want to calculate the mean and standard deviation"
+    "We define our mean and standard deviation calculations as functions."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def mean(n):\n",
+    "    return sum(n) / float(len(n))\n",
+    "\n",
+    "def stdev(n):\n",
+    "    average = mean(n)\n",
+    "    return math.sqrt(sum([pow(x - average, 2) for x in n]) / float(len(n) - 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can optimize our processing speed by parallelizing our mean and standard deviation calculations using the built-in multiprocessor library."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class 0 contains 8 tuples\n",
+      "Class 1 contains 8 tuples\n"
+     ]
+    }
+   ],
+   "source": [
+    "import multiprocessing as mp\n",
+    "\n",
+    "def format_calc(t):\n",
+    "    return [mean(t), stdev(t)]\n",
+    "\n",
+    "def prepare_data(dataset):\n",
+    "    pool = mp.Pool(mp.cpu_count())\n",
+    "    summary = {}\n",
+    "    for klass, data_points in dataset.iteritems():\n",
+    "        summary[klass] = pool.map(format_calc, zip(*data_points))\n",
+    "    return summary\n",
+    "\n",
+    "summary = prepare_data(classified_set)\n",
+    "\n",
+    "for klass, tupl in summary.iteritems():\n",
+    "    print('Class {0} contains {1} tuples').format(klass, len(tupl))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
