--- a/Naive-Bayes.ipynb
+++ b/Naive-Bayes.ipynb
@@ -172,8 +172,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Class 0 contains 332 data points\n",
-      "Class 1 contains 182 data points\n"
+      "Class 0 contains 322 data points\n",
+      "Class 1 contains 192 data points\n"
      ]
     }
    ],
@@ -221,12 +221,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can optimize our processing speed by parallelizing our mean and standard deviation calculations using the built-in multiprocessor library."
+    "We can optimize our process time by parallelizing our mean and standard deviation calculations using the built-in multiprocessor library."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -244,29 +244,112 @@
     "import multiprocessing as mp\n",
     "\n",
     "def format_calc(t):\n",
-    "    return [mean(t), stdev(t)]\n",
+    "    return (mean(t), stdev(t))\n",
     "\n",
     "def prepare_data(dataset):\n",
     "    pool = mp.Pool(mp.cpu_count())\n",
     "    summary = {}\n",
     "    for klass, data_points in dataset.iteritems():\n",
     "        summary[klass] = pool.map(format_calc, zip(*data_points))\n",
+    "    pool.close()\n",
+    "    pool.join()\n",
     "    return summary\n",
     "\n",
-    "summary = prepare_data(classified_set)\n",
+    "summary_set = prepare_data(classified_set)\n",
     "\n",
-    "for klass, tupl in summary.iteritems():\n",
+    "for klass, tupl in summary_set.iteritems():\n",
     "    print('Class {0} contains {1} tuples').format(klass, len(tupl))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Training and Testing\n",
+    "-------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now create the Naive-Bayes classifier using our training set and a Guassian probability function to produce $P(A|X)$. This is the probability of an attribute belonging to a class and due to the assumption that each probability is independent from each other, the calculation process can be parallelized (for future implementation)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import math\n",
+    "\n",
+    "def gauss(x, mean, stdev):\n",
+    "    ex = math.exp(-(math.pow(x - mean, 2) / (2 * math.pow(stdev, 2))))\n",
+    "    return (1 / (math.sqrt(2 * math.pi) * stdev)) * ex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def predict(summary_set, data_point):\n",
+    "    probabilities = {}\n",
+    "    for klass, summary in summary_set.iteritems():\n",
+    "        probabilities[klass] = 1\n",
+    "        for i in xrange(len(summary)):\n",
+    "            mean, stdev = summary[i]\n",
+    "            probabilities[klass] *= gauss(data_point[i], mean, stdev)\n",
+    "    return max(probabilities.iterkeys(), key=(lambda key: probabilities[key]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's test our model against the training set and hope that the accuracy falls in the acceptable range."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Naive-Bayes Model yields 75.59% accuracy\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_accuracy(summary_set, test_set):\n",
+    "    correct_count = 0\n",
+    "    for test_point in test_set:\n",
+    "        if test_point[-1] == predict(summary_set, test_point):\n",
+    "            correct_count += 1\n",
+    "    return correct_count / float(len(test_set)) * 100\n",
+    "\n",
+    "accuracy = get_accuracy(summary_set, test_set)\n",
+    "\n",
+    "print('The Naive-Bayes Model yields {0}% accuracy').format(round(accuracy, 2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our accuracy lies between 70% - 76% range; therefore, "
+   ]
   }
  ],
  "metadata": {
