--- a/Naive-Bayes.ipynb
+++ b/Naive-Bayes.ipynb
@@ -172,8 +172,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Class 0 contains 322 data points\n",
-      "Class 1 contains 192 data points\n"
+      "Class 0 contains 325 data points\n",
+      "Class 1 contains 189 data points\n"
      ]
     }
    ],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -348,8 +348,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our accuracy lies between 70% - 76% range; therefore, "
+    "Our accuracy lies between 70% - 76% range; therefore, our model is accurate (at least for the purpose of this notebook)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
